[package]
name = "rmc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmc-common = { path = "../rmc-common" }
bytemuck = { version = "1.15.0", features = ["derive"] }
glow = "0.13.1"
sdl2 = "0.36.0"
vek = "0.16.1"
