[package]
name = "rmc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmc-common = { path = "../rmc-common" }
bytemuck = { version = "1.15.0", features = ["derive"] }
glow = "0.12.0"
sdl2 = "0.34.5"
vek = "0.16.1"
imgui-glow-renderer = "0.11.0"
imgui-sdl2-support = "0.11.0"
imgui = "0.11.0"
image = "0.25.0"
