[package]
name = "rmc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmc-common = { path = "../rmc-common" }
bytemuck = { version = "1.15", features = ["derive"] }
glow = "0.13"
sdl2 = "0.36"
vek = "0.16"
imgui-glow-renderer = { git = "https://github.com/nobbele/imgui-rs", rev = "43df810" }
imgui-sdl2-support = { git = "https://github.com/nobbele/imgui-rs", rev = "43df810" }
imgui = { git = "https://github.com/nobbele/imgui-rs", rev = "43df810" }
image = "0.25"
ndarray = "0.15"
