[package]
name = "rmc-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
vek = "0.16.1"

# imgui = { git = "https://github.com/nobbele/imgui-rs", rev = "43df810" }

# Needed for keycodes
sdl2 = "0.36"
