[package]
name = "rmc-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
vek = "0.16"
lazy_static = "1.4"
itertools = "0.12"
enum-assoc = "1.1"
noise = "0.9"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"

# inline_tweak = "1.1.1"

# Needed for keycodes
sdl2 = "0.36"
